--- a/TSPCS325/TSPCS325.vcxproj.filters
+++ b/TSPCS325/TSPCS325.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="mstPrim.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="greedyOddMatching.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="graphFileIO.cpp">
@@ -36,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="vertex.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="greedyOddMatching.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
