--- a/TSPCS325/TSPCS325.vcxproj.filters
+++ b/TSPCS325/TSPCS325.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="greedyOddMatching.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="eulerTour.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="graphFileIO.cpp">
@@ -42,6 +45,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="greedyOddMatching.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="eulerTour.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
