Fixed Seg Fault

--- a/TSPCS325/makefile
+++ b/TSPCS325/makefile
@@ -5,11 +5,11 @@ CXXFLAGS += -pedantic-errors
 CXXFLAGS += -g
 CXXFLAGS += -O3 
 
-OBJS = main.o graphFileIO.o greedyOddMatching.o mstPrim.o vertex.o
+OBJS = main.o graphFileIO.o greedyOddMatching.o mstPrim.o vertex.o eulerTour.o
 
-SRCS = main.cpp graphFileIO.cpp greedyOddMatching.cpp mstPrim.cpp vertex.cpp
+SRCS = main.cpp graphFileIO.cpp greedyOddMatching.cpp mstPrim.cpp vertex.cpp eulerTour.cpp
 
-HEADERS = graphFileIO.h greedyOddMatching.h mstPrim.h vertex.h
+HEADERS = graphFileIO.h greedyOddMatching.h mstPrim.h vertex.h eulerTour.h
 
 main: ${OBJS} ${HEADERS}
 	${CXX} ${CXXFLAGS} ${OBJS} -o main
