--- a/TSPCS325/TSPCS325.vcxproj
+++ b/TSPCS325/TSPCS325.vcxproj
@@ -119,6 +119,7 @@
     <ClInclude Include="graphFileIO.h" />
     <ClInclude Include="greedyOddMatching.h" />
     <ClInclude Include="mstPrim.h" />
+    <ClInclude Include="twoOpt.h" />
     <ClInclude Include="vertex.h" />
   </ItemGroup>
   <ItemGroup>
@@ -127,6 +128,7 @@
     <ClCompile Include="greedyOddMatching.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mstPrim.cpp" />
+    <ClCompile Include="twoOpt.cpp" />
     <ClCompile Include="vertex.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
